--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ p{
     min-width: 300px;
 }
 .col-2 img{
-    max-width:100%;
-    padding: 50px 0;
+    max-width:90%;
+    padding: 40px 0;
 
 }
 .col-2 h1{
@@ -99,6 +99,7 @@ p{
 }
 .col-3 img{
     width: 100%;
+    margin-top: 20px;
 }
 .small-container{
     max-width: 1080px;
